Add code for lab2 part b

--- a/2024_Fall_Lab_2/lab2.ipynb
+++ b/2024_Fall_Lab_2/lab2.ipynb
@@ -28,7 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "samplerate, data = wavfile.read('./human_voice.wav')"
+    "samplerate, data = wavfile.read('./sound_files/human_voice.wav')"
    ]
   },
   {
@@ -261,9 +261,74 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a3e5d98f-ebe6-4179-8808-ee0b9f9b13f0",
+   "metadata": {},
+   "source": [
+    "# Part B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "f1abf4a7-31af-4442-94d5-05f1b4ed7fc5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "samplerate1, data1 = wavfile.read('./sound_files/M1.wav')\n",
+    "samplerate2, data2 = wavfile.read('./sound_files/M2.wav')\n",
+    "samplerate3, data3 = wavfile.read('./sound_files/M3.wav')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "67971ae3-f033-4a23-b44e-7a61e78192fa",
+   "metadata": {},
+   "source": [
+    "Calculating RMS of waves"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "d5053759-913b-4040-ad2c-618a331bec5a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10992.2901396312\n",
+      "10949.24770524403\n",
+      "10992.2901396312\n"
+     ]
+    }
+   ],
+   "source": [
+    "# square data\n",
+    "data1 = np.array(data1 ** 2, dtype=np.int32)\n",
+    "data2 = np.array(data2 ** 2, dtype=np.int32)\n",
+    "data3 = np.array(data3 ** 2, dtype=np.int32)\n",
+    "\n",
+    "# take mean\n",
+    "data1_rms = np.mean(data1 ** 2)\n",
+    "data2_rms = np.mean(data2 ** 2)\n",
+    "data3_rms = np.mean(data3 ** 2)\n",
+    "\n",
+    "# take square root\n",
+    "data1_rms = np.sqrt(data1_rms)\n",
+    "data2_rms = np.sqrt(data2_rms)\n",
+    "data3_rms = np.sqrt(data3_rms)\n",
+    "\n",
+    "print(data1_rms)\n",
+    "print(data2_rms)\n",
+    "print(data3_rms)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66ea2147-2478-4410-9816-4805649398e6",
+   "id": "5cf26745-7b95-4d34-a54d-97696c48e879",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -285,7 +350,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
